--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@ionic-native/core": "3.12.1",
         "@ionic-native/geolocation": "^4.1.0",
         "@ionic-native/google-maps": "3.12.1",
+        "@ionic-native/native-geocoder": "^4.1.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
@@ -34,6 +35,7 @@
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-geolocation": "^2.4.3",
+        "cordova-plugin-nativegeocoder": "^2.0.2",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -57,7 +59,8 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "cordova-plugin-geolocation": {}
+            "cordova-plugin-geolocation": {},
+            "cordova-plugin-nativegeocoder": {}
         },
         "platforms": [
             "android"
